# simple-sell

./: .gitignore  Makefile  README.md
.github/workflows/: test-backend.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/db/: database.py  models.py  schemas.py  seed.py
backend/app/routers/: listings.py
backend/app/services/: ai.py
backend/tests/: conftest.py  test_ai.py  test_listings.py
frontend/: index.html
frontend/src/: App.tsx  index.css
frontend/src/components/: ListingCard.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: CreateListing.tsx  Index.tsx  ListingDetail.tsx
src/: App.tsx
src/components/: ImageUpload.tsx  ListingCard.tsx
src/lib/: api.ts
src/pages/: CreateListing.tsx  Index.tsx
